objects/sumoapp__AvailabilityLineItem__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Availability</label>
        <referenceTo>sumoapp__Availability__c</referenceTo>
        <relationshipLabel>Availability Items</relationshipLabel>
        <relationshipName>AvailabilityItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sumoapp__DayOfWeek__c</fullName>
        <label>Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUNDAY</fullName>
                    <label>Sunday</label>
                </value>
                <value>
                    <fullName>MONDAY</fullName>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>TUESDAY</fullName>
                    <label>Tuesday</label>
                </value>
                <value>
                    <fullName>WEDNESDAY</fullName>
                    <label>Wednesday</label>
                </value>
                <value>
                    <fullName>THURSDAY</fullName>
                    <label>Thursday</label>
                </value>
                <value>
                    <fullName>FRIDAY</fullName>
                    <label>Friday</label>
                </value>
                <value>
                    <fullName>SATURDAY</fullName>
                    <label>Saturday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__EndTime__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sumoapp__Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invite</label>
        <referenceTo>sumoapp__Invite__c</referenceTo>
        <relationshipLabel>Invite Availability Items</relationshipLabel>
        <relationshipName>InviteAvailabilityItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartTime__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>SUMO Availability Line Item</label>
    <nameField>
        <displayFormat>ALI-{000000}</displayFormat>
        <label>Availability Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Availability Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>